# Trucks-v0.2

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  debug_ortools.py  docker-compose.yml  fix_coordinates.py  pyproject.toml  seed_data.py  test_priority_api.py  test_priority_debug.py  test_solver_comparison.py  truck_optimizer.db
app/: api.py  cli.py  constraints.py  distance_offline.py  messaging.py  ml_calibration.py  models.py  repo.py  reports.py  route_display.py  routing.py  schemas.py  service.py  solver_greedy.py  solver_ortools_vrp.py  solver_pyvrp.py  solver_pyvrp_broken.py  solver_pyvrp_fixed.py  traffic_calibrator.py
backend/: .dockerignore  Dockerfile  __init__.py  main.py
backend/api/: main.py  routes.py
backend/config/: __init__.py  settings.yaml
backend/core/: constraints.py  dispatch.py  dispatcher.py  ml_calibration.py  service.py  solver_pyvrp.py
backend/models/: models.py  repo.py  schemas.py
backend/tests/: test_api.py
config/: city_rules.yaml  params.yaml
fixtures/: small_city.json
frontend/: Dockerfile  default.conf
frontend/ui-active/: index.html
reverse-proxy/: nginx.conf
scripts/: calibrate_priority_slider.py
tests/: test_balance_slider.py  test_catalog_items.py  test_constraints.py  test_dispatch_lifecycle.py  test_job_soft_delete.py  test_models_repo.py  test_optimize.py  test_optimize_after_truck_delete.py  test_optimize_overtime.py  test_per_route_objective_breakdown.py  test_priority_slider.py  test_pyvrp_two_truck_attribution.py  test_route_display.py  test_routes_api.py  test_solver_pyvrp.py  test_truck_delete.py  test_truck_restrictions.py
ui/: app.py
